package oop2018.itinere1.gruppo77.dispositivi;

public class LivelloNonValidoException extends Exception {
    public LivelloNonValidoException() {}

    public LivelloNonValidoException(String msg) {
        super(msg);
    }
}
